--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     
     <script  src="js/index.js"></script>
-    hello word we are software developer!
+    hello word we are software developers!
 
 
   </body>
